--- a/docker-compose_application.yml
+++ b/docker-compose_application.yml
@@ -1,30 +1,10 @@
 services:
 
- database:
-  container_name: sql-server-db
-  image: mcr.microsoft.com/mssql/server:2019-latest
-  ports:
-   - "5533:1433"
-  environment:
-   SA_PASSWORD: "Admin123!"
-   ACCEPT_EULA: "Y"
-  volumes:
-   - kyc-saga-sqldb:/var/opt/mssql
-
- mongodb:
-  container_name: mongodb
-  image: mongo:6.0
-  volumes:
-   - ~/mongo:/data/db
-  ports:
-   - "27017:27017"
-
-
  eventsapi:
   image: events
   build: 
    context: ./backend
-   dockerfile: ./Services/Events/API/Dockerfile
+   dockerfile: ./Services/Events/Events.API/Dockerfile
   ports:
    - 7203:80
   environment:
@@ -61,6 +41,3 @@ services:
    - 3000:3000
   environment:
    NODE_ENV: "Docker"
-
-volumes:
- kyc-saga-sqldb:
