--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "dayjs": "^1.11.9",
+    "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-oidc-context": "^3.0.0",
     "react-router-dom": "^6.19.0",
     "react-scripts": "^5.0.1",
     "react-tracked": "^1.7.11",
