fixed identity service Docker container. Working on fixing fetching through API Gateway & ocelot.

--- a/backend/Gateways/Gateway.Web/Properties/launchSettings.json
+++ b/backend/Gateways/Gateway.Web/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "Gateway.Web": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "http://localhost:7201",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
