--- a/backend/Services/Identity/Identity.API/Properties/launchSettings.json
+++ b/backend/Services/Identity/Identity.API/Properties/launchSettings.json
@@ -1,15 +1,15 @@
-﻿{
-  "$schema": "https://json.schemastore.org/launchsettings.json",
+{
   "profiles": {
     "Identity.API": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:7202",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "http://localhost:7202"
     }
-  }
+  },
+  "$schema": "https://json.schemastore.org/launchsettings.json"
 }
