--- a/backend/Gateways/Gateway.Web/Properties/launchSettings.json
+++ b/backend/Gateways/Gateway.Web/Properties/launchSettings.json
@@ -1,14 +1,13 @@
-﻿{
-  "$schema": "https://json.schemastore.org/launchsettings.json",
+{
   "profiles": {
     "Gateway.Web": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": false,
-      "applicationUrl": "http://localhost:7201",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "http://localhost:7201"
     }
-  }
+  },
+  "$schema": "https://json.schemastore.org/launchsettings.json"
 }
