--- a/backend/Services/Events/Events.API/Dockerfile
+++ b/backend/Services/Events/Events.API/Dockerfile
@@ -1,8 +1,10 @@
-FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+USER app
 WORKDIR /app
 EXPOSE 80
 
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["Services/Events/Events.API/Events.API.csproj", "Services/Events/Events.API/"]
 COPY ["Services/Events/Events.Infrastructure/Events.Infrastructure.csproj", "Services/Events/Events.Infrastructure/"]
@@ -12,10 +14,11 @@ COPY ["Services/Events/Events.Domain/Events.Domain.csproj", "Services/Events/Eve
 RUN dotnet restore "Services/Events/Events.API/Events.API.csproj"
 COPY . .
 WORKDIR "/src/Services/Events/Events.API"
-RUN dotnet build "Events.API.csproj" -c Release -o /app/build
+RUN dotnet build "Events.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "Events.API.csproj" -c Release -o /app/publish /p:UseAppHost=false
+ARG BUILD_CONFIGURATION=Release
+RUN dotnet publish "Events.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
