--- a/backend/Services/Subscription/Subscription.API/Dockerfile
+++ b/backend/Services/Subscription/Subscription.API/Dockerfile
@@ -1,8 +1,10 @@
-FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+USER app
 WORKDIR /app
 EXPOSE 80
 
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["Services/Subscription/Subscription.API/Subscription.API.csproj", "Services/Subscription/Subscription.API/"]
 COPY ["Services/Subscription/Subscription.Infrastructure/Subscription.Infrastructure.csproj", "Services/Subscription/Subscription.Infrastructure/"]
@@ -12,10 +14,11 @@ COPY ["Services/Subscription/Subscription.Domain/Subscription.Domain.csproj", "S
 RUN dotnet restore "Services/Subscription/Subscription.API/Subscription.API.csproj"
 COPY . .
 WORKDIR "/src/Services/Subscription/Subscription.API"
-RUN dotnet build "Subscription.API.csproj" -c Release -o /app/build
+RUN dotnet build "Subscription.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "Subscription.API.csproj" -c Release -o /app/publish /p:UseAppHost=false
+ARG BUILD_CONFIGURATION=Release
+RUN dotnet publish "Subscription.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
