--- a/backend/Services/Notification/Notification.API/Dockerfile
+++ b/backend/Services/Notification/Notification.API/Dockerfile
@@ -1,8 +1,10 @@
-FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+USER app
 WORKDIR /app
 EXPOSE 80
 
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["Services/Notification/Notification.API/Notification.API.csproj", "Services/Notification/Notification.API/"]
 COPY ["Services/Notification/Notification.Infrastructure/Notification.Infrastructure.csproj", "Services/Notification/Notification.Infrastructure/"]
@@ -12,10 +14,11 @@ COPY ["Services/Notification/Notification.Domain/Notification.Domain.csproj", "S
 RUN dotnet restore "Services/Notification/Notification.API/Notification.API.csproj"
 COPY . .
 WORKDIR "/src/Services/Notification/Notification.API"
-RUN dotnet build "Notification.API.csproj" -c Release -o /app/build
+RUN dotnet build "Notification.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "Notification.API.csproj" -c Release -o /app/publish /p:UseAppHost=false
+ARG BUILD_CONFIGURATION=Release
+RUN dotnet publish "Notification.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
