--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/lab": "^5.0.0-alpha.140",
     "@mui/material": "^5.14.5",
     "@mui/x-date-pickers": "^6.11.1",
+    "@reduxjs/toolkit": "^2.2.2",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "dayjs": "^1.11.9",
@@ -22,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-oidc-context": "^3.0.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.19.0",
     "react-scripts": "^5.0.1",
     "react-tracked": "^1.7.11",
