Configured Keycloak authentication!

--- a/backend/Gateways/Gateway.Web/appsettings.Development.json
+++ b/backend/Gateways/Gateway.Web/appsettings.Development.json
@@ -1,8 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "Application": {
+    "Environment": "Development",
+    "EnvironmentDisplayName": "Local development environment",
+    "Version": "0.1.0",
+    "Keycloak": {
+      "Realm": "mweb_personnel",
+      "ClientId": "mweb_personnel",
+      "AuthUrl": "http://localhost:8036/auth"
     }
   }
 }
