Algorithms project setup (added to ocelot, docker compose, appsettings setup, projects). Updated Solution dependencies

--- a/backend/Services/Algorithms/Algorithms.API/Algorithms.API.csproj
+++ b/backend/Services/Algorithms/Algorithms.API/Algorithms.API.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
@@ -19,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\Algorithms.Infrastructure\Algorithms.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
