--- a/backend/Services/Algorithms/Algorithms.API/appsettings.Development.json
+++ b/backend/Services/Algorithms/Algorithms.API/appsettings.Development.json
@@ -1,8 +1,10 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "connectionStrings": {
+    "DefaultConnection": "Data Source=.; Initial Catalog=Algorithms; Integrated Security=True; TrustServerCertificate=true;"
+  },
+  "AuditLoggingDatabase": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "AlgorithmsLogs",
+    "LogsCollectionName": "Logs"
   }
 }
