--- a/backend/Services/Algorithms/Algorithms.API/appsettings.json
+++ b/backend/Services/Algorithms/Algorithms.API/appsettings.json
@@ -1,9 +1,6 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "connectionStrings": {
+    "DefaultConnection": "Data Source=.; Initial Catalog=Algorithms; Integrated Security=True; TrustServerCertificate=true;"
   },
   "AllowedHosts": "*"
 }
