--- a/dev-tools/database/core/liquibase.properties
+++ b/dev-tools/database/core/liquibase.properties
@@ -20,10 +20,10 @@
 ##      The url H2 example below is relative to 'pwd' resource.
 ####
 # Enter the path for your changelog file.
-changeLogFile=mweb_changelog.sql
+changeLogFile=changelog.xml
 
 #### Enter the Target database 'url' information  ####
-liquibase.command.url=jdbc:postgresql://localhost:5433/postgres
+liquibase.command.url=jdbc:postgresql://localhost:5432/postgres
 
 # Enter the username for your Target database.
 liquibase.command.username: postgres
@@ -35,7 +35,7 @@ liquibase.command.password: password
 ## The source database is the baseline or reference against which your target database is compared for diff/diffchangelog commands.
 
 # Enter URL for the source database
-liquibase.command.referenceUrl: jdbc:h2:tcp://localhost:9090/mem:integration
+liquibase.command.referenceUrl: jdbc:postgresql://localhost:5432/postgres
 
 # Enter the username for your source database
 liquibase.command.referenceUsername: postgres
