Initial DbContext / repository setup

--- a/backend/Gateways/Gateway.Web/appsettings.Development.json
+++ b/backend/Gateways/Gateway.Web/appsettings.Development.json
@@ -6,7 +6,7 @@
     "Keycloak": {
       "Realm": "mweb_personnel",
       "ClientId": "mweb_personnel",
-      "AuthUrl": "http://localhost:8036/auth"
+      "AuthUrl": "http://localhost:8036"
     }
   }
 }
