--- a/backend/Services/Algorithms/Algorithms.API/appsettings.Docker.json
+++ b/backend/Services/Algorithms/Algorithms.API/appsettings.Docker.json
@@ -1,10 +1,15 @@
 {
-  "connectionStrings": {
-    "DefaultConnection": "Data Source=database; Initial Catalog=Algorithms; User Id=SA; Password=Admin123!; TrustServerCertificate=true;"
-  },
   "AuditLoggingDatabase": {
     "ConnectionString": "mongodb://mongodb:27017",
     "DatabaseName": "AlgorithmsLogs",
     "LogsCollectionName": "Logs"
+  },
+  "Databae": {
+    "Host": "localhost",
+    "Port": 5432,
+    "Database": "algorithms"
+  },
+  "Events": {
+    "PublishingLimit": 100
   }
 }
