--- a/backend/Services/Algorithms/Algorithms.API/appsettings.Development.json
+++ b/backend/Services/Algorithms/Algorithms.API/appsettings.Development.json
@@ -1,10 +1,18 @@
 {
-  "connectionStrings": {
-    "DefaultConnection": "Data Source=.; Initial Catalog=Algorithms; Integrated Security=True; TrustServerCertificate=true;"
-  },
+  "BaseUrl": "http://localhost:3000/",
   "AuditLoggingDatabase": {
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "AlgorithmsLogs",
     "LogsCollectionName": "Logs"
+  },
+  "Database": {
+    "Host": "localhost",
+    "Port": 5432,
+    "Database": "algorithms",
+    "Username": "postgres",
+    "Password": "password"
+  },
+  "Events": {
+    "PublishingLimit": 100
   }
 }
