--- a/backend/Services/Algorithms/Algorithms.API/appsettings.json
+++ b/backend/Services/Algorithms/Algorithms.API/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "connectionStrings": {
-    "DefaultConnection": "Data Source=.; Initial Catalog=Algorithms; Integrated Security=True; TrustServerCertificate=true;"
-  },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Events": {
+    "PublishingLimit": 100
+  }
 }
