--- a/backend/Services/Algorithms/Algorithms.Domain/Algorithms.Domain.csproj
+++ b/backend/Services/Algorithms/Algorithms.Domain/Algorithms.Domain.csproj
@@ -8,6 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="MediatR" Version="12.3.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
     <PackageReference Include="MongoDB.Bson" Version="2.25.0" />
   </ItemGroup>
 
